--- a/dags/resources/config/content_process_DAP_Testing.yml
+++ b/dags/resources/config/content_process_DAP_Testing.yml
@@ -11,7 +11,7 @@ CommonConf: !include common/snowflake_common_config.yml
 
 dags:
   sagemaker:
-    domain: "content"
+    domain: "dap_content"
     sub_domain: "job_process"
     action: "DAP_Testing_glue_test_V2"
     default_args:
