Change upstream reference and parameter filename (#3)

--- a/dags/resources/config/content_process_PostLaunchMetrics.yml
+++ b/dags/resources/config/content_process_PostLaunchMetrics.yml
@@ -40,11 +40,11 @@ dags:
       type: "BashOperator"
       script_loc: "common"
       script_name: "post_launch_metrics_subscriber"
-      param_file_name: "post_launch_metrics_parameters"
+      param_file_name: "post_launch_metrics"
 
     - name: "send_notification_cds"
       type: "EmailOperator"
       to: "jonny.elliott@warnermedia.com"
       subject: "sagemaker-airflow: EMAIL TASK test"
       html: "Hi Team,<br><h3>Test email from sagemaker-airflow DAG task.</h3><br>Regards,<br> DAP"
-      upstream_task_name : "post_launch_metrics_subscriber"
+      upstream_task_name : "python_script_post_launch_metrics"
