--- a/Py_Models/post_launch_metrics/post_launch_metrics.json
+++ b/Py_Models/post_launch_metrics/post_launch_metrics.json
@@ -1,4 +1,9 @@
 {
-  "db_name": "MAX_DEV",
-  "workspace": "workspace"
+  "DEV": {
+    "SNOWFLAKE_ENV": "sf_max_dev",
+    "WAREHOUSE": "MAX_DATASCIENCE_DEV",
+    "ROLE": "MAX_ETL_DEV",
+    "DATABASE": "MAX_DEV",
+    "SCHEMA": "workspace"
+  }
 }
