--- a/Py_Models/post_launch_subscriber/post_launch_subscriber.json
+++ b/Py_Models/post_launch_subscriber/post_launch_subscriber.json
@@ -5,5 +5,21 @@
     "ROLE": "MAX_ETL_DEV",
     "DATABASE": "MAX_DEV",
     "SCHEMA": "workspace"
+  },
+  
+  "BETA": {
+    "SNOWFLAKE_ENV": "sf_max_beta",
+    "WAREHOUSE": "MAX_DATASCIENCE_BETA",
+    "ROLE": "MAX_ETL_BETA",
+    "DATABASE": "MAX_BETA",
+    "SCHEMA": "workspace"
+  },
+
+  "PROD": {
+    "SNOWFLAKE_ENV": "sf_max_prod",
+    "WAREHOUSE": "MAX_DATASCIENCE_PROD",
+    "ROLE": "MAX_ETL_PROD",
+    "DATABASE": "MAX_PROD",
+    "SCHEMA": "workspace"
   }
 }
