Beta dev merge (#67)
* added lib to DAP testing

* Added codeowners team

* Develop (#21)

* added lib for DAP Testing

* Update CODEOWNERS

* Add first files for postlaunch DAG using python script (#2)

* Change upstream reference and parameter filename (#3)

* Rename file for airflow to work (#4)

* Remove library reference (#5)

* Change reference of prod to dev for test (#6)

* Set up env based parameters for dev (#7)

* Add missing role (#8)

* Add initial SQL of sub base update (#9)

* Fix typo with uneeded equality (#10)

* Add absolute path reference (#11)

* Capitalize some variables (#12)

* Add metric query (#13)

* Add missing SQL file (#14)

* Fix path (#15)

* Add missing import (#16)

* Change variable name and pylint fixes (#17)

* Add file extension missing (#18)

* Change stream table to viewership table to match sql (#19)

* Remove table literals as we dont fill params via snowflake (#20)

* Develop merge (#22)

* Update post_launch_metrics.json

* Update post_launch_metrics.json

* Update CODEOWNERS (#23)

* Update CODEOWNERS (#24)

Co-authored-by: CloudOpsJenkins <dapadmin&support@hbo.com>
Co-authored-by: Bobby484 <61495339+Bobby484@users.noreply.github.com>
Co-authored-by: jonnyhbo <70723253+jonnyhbo@users.noreply.github.com>

* Mc local dev (#57) (#58)

* Mc local dev (#57)

* added lib for DAP Testing

* Production Changes (#1)

* init changes

* latest changes

* Update dag_generator.py

* Changed path

* updated bucket name

* added lib to DAP testing

* Adding code owners

Co-authored-by: CloudOpsJenkins <dapadmin&support@hbo.com>

* Update CODEOWNERS

* Add first files for postlaunch DAG using python script (#2)

* Change upstream reference and parameter filename (#3)

* Rename file for airflow to work (#4)

* Remove library reference (#5)

* Change reference of prod to dev for test (#6)

* Set up env based parameters for dev (#7)

* Add mi

--- a/dags/resources/config/content_process_PostLaunchMetrics.yml
+++ b/dags/resources/config/content_process_PostLaunchMetrics.yml
@@ -25,7 +25,7 @@ dags:
       retries: 1
       domain: "content"
       retry_delay: 15
-    schedule_interval: "@once"
+    schedule_interval: "@daily"
     max_active_runs: 1
     catchup: False
     schema: "WORKSPACE"
@@ -41,7 +41,7 @@ dags:
       script_loc: "common"
       script_name: "post_launch_subscriber"
       param_file_name: "post_launch_subscriber"
-      
+
     - name: "python_script_post_launch_metrics"
       type: "BashOperator"
       script_loc: "common"
