--- a/dags/resources/config/content_process_PostLaunchMetrics.yml
+++ b/dags/resources/config/content_process_PostLaunchMetrics.yml
@@ -36,25 +36,31 @@ dags:
       PROD: "hbomax-cds-alerts"
     tasks:
 
-    - name: "python_script_post_launch_subscriber"
-      type: "BashOperator"
-      script_loc: "common"
-      script_name: "post_launch_subscriber"
-      param_file_name: "post_launch_subscriber"
+    #- name: "python_script_post_launch_subscriber"
+    #  type: "BashOperator"
+    #  script_loc: "common"
+    #  script_name: "post_launch_subscriber"
+    #  param_file_name: "post_launch_subscriber"
 
-    - name: "python_script_post_launch_metrics"
-      type: "BashOperator"
-      script_loc: "common"
-      script_name: "post_launch_metrics"
-      param_file_name: "post_launch_metrics"
-      upstream_task_name: "python_script_post_launch_subscriber"
+    #- name: "python_script_post_launch_metrics"
+    #  type: "BashOperator"
+    #  script_loc: "common"
+    #  script_name: "post_launch_metrics"
+    #  param_file_name: "post_launch_metrics"
+    #  upstream_task_name: "python_script_post_launch_subscriber"
 
-    - name: "python_script_post_launch_trailer_metrics"
+    #- name: "python_script_post_launch_trailer_metrics"
+    #  type: "BashOperator"
+    #  script_loc: "common"
+    #  script_name: "post_launch_trailer_metrics"
+    #  param_file_name: "post_launch_trailer_metrics"
+    #  upstream_task_name: "python_script_post_launch_subscriber"
+
+    - name: "prediction_feature_extraction"
       type: "BashOperator"
       script_loc: "common"
-      script_name: "post_launch_trailer_metrics"
-      param_file_name: "post_launch_trailer_metrics"
-      upstream_task_name: "python_script_post_launch_subscriber"
+      script_name: "prediction_feature_extraction"
+      param_file_name: "prediction_feature_extraction"
 
     - name: "send_notification_cds"
       type: "EmailOperator"
