--- a/dags/resources/config/content_process_PostLaunchMetrics.yml
+++ b/dags/resources/config/content_process_PostLaunchMetrics.yml
@@ -38,6 +38,7 @@ dags:
     - name: "trailer_feature_to_staging"
       templates_dict:
         stage: "{{ var.value.DS_CONTENT_HBO_INGEST_DATASCIENCE_CONTENT_DEV }}"
+        database: 'max_beta'
         schema: 'workspace'
       sql_file_names:
         - "feature_extraction_trailer.sql"
@@ -45,6 +46,7 @@ dags:
     - name: "funnel_metric_feature_to_staging"
       templates_dict:
         stage: "{{ var.value.DS_CONTENT_HBO_INGEST_DATASCIENCE_CONTENT_DEV }}"
+        database: 'max_beta'
         schema: 'workspace'
       sql_file_names:
         - "feature_extraction_funnel_metric.sql"
@@ -52,6 +54,7 @@ dags:
     - name: "vtp_feature_to_staging"
       templates_dict:
         stage: "{{ var.value.DS_CONTENT_HBO_INGEST_DATASCIENCE_CONTENT_DEV }}"
+        database: 'max_beta'
         schema: 'workspace'
       sql_file_names:
         - "feature_extraction_vtp.sql"
