--- a/dags/resources/config/content_process_PostLaunchMetrics.yml
+++ b/dags/resources/config/content_process_PostLaunchMetrics.yml
@@ -35,90 +35,90 @@ dags:
       PROD: "hbomax-cds-alerts"
     tasks:
 
-    - name: "python_script_post_launch_subscriber"
-      type: "BashOperator"
-      script_loc: "common"
-      script_name: "post_launch_subscriber"
-      param_file_name: "post_launch_subscriber"
+#     - name: "python_script_post_launch_subscriber"
+#       type: "BashOperator"
+#       script_loc: "common"
+#       script_name: "post_launch_subscriber"
+#       param_file_name: "post_launch_subscriber"
 
-    - name: "python_script_post_launch_metrics"
-      type: "BashOperator"
-      script_loc: "common"
-      script_name: "post_launch_metrics"
-      param_file_name: "post_launch_metrics"
-      upstream_task_name: "python_script_post_launch_subscriber"
+#     - name: "python_script_post_launch_metrics"
+#       type: "BashOperator"
+#       script_loc: "common"
+#       script_name: "post_launch_metrics"
+#       param_file_name: "post_launch_metrics"
+#       upstream_task_name: "python_script_post_launch_subscriber"
 
-    - name: "python_script_post_launch_trailer_metrics"
-      type: "BashOperator"
-      script_loc: "common"
-      script_name: "post_launch_trailer_metrics"
-      param_file_name: "post_launch_trailer_metrics"
-      upstream_task_name: "python_script_post_launch_subscriber"
+#     - name: "python_script_post_launch_trailer_metrics"
+#       type: "BashOperator"
+#       script_loc: "common"
+#       script_name: "post_launch_trailer_metrics"
+#       param_file_name: "post_launch_trailer_metrics"
+#       upstream_task_name: "python_script_post_launch_subscriber"
 
-    - name: "trailer_feature_to_staging"
-      templates_dict:
-        stage: "{{ var.value.DS_CONTENT_HBO_INGEST_DATASCIENCE_CONTENT_DEV }}"
-        database: 'max_beta'
-        schema: 'workspace'
-      sql_file_names:
-        - "feature_extraction_trailer.sql"
-      upstream_task_name: "python_script_post_launch_trailer_metrics"
+#     - name: "trailer_feature_to_staging"
+#       templates_dict:
+#         stage: "{{ var.value.DS_CONTENT_HBO_INGEST_DATASCIENCE_CONTENT_DEV }}"
+#         database: 'max_beta'
+#         schema: 'workspace'
+#       sql_file_names:
+#         - "feature_extraction_trailer.sql"
+#       upstream_task_name: "python_script_post_launch_trailer_metrics"
 
-    - name: "funnel_metric_feature_to_staging"
-      templates_dict:
-        stage: "{{ var.value.DS_CONTENT_HBO_INGEST_DATASCIENCE_CONTENT_DEV }}"
-        database: 'max_beta'
-        schema: 'workspace'
-      sql_file_names:
-        - "feature_extraction_funnel_metric.sql"
-      upstream_task_name: "python_script_post_launch_metrics"
+#     - name: "funnel_metric_feature_to_staging"
+#       templates_dict:
+#         stage: "{{ var.value.DS_CONTENT_HBO_INGEST_DATASCIENCE_CONTENT_DEV }}"
+#         database: 'max_beta'
+#         schema: 'workspace'
+#       sql_file_names:
+#         - "feature_extraction_funnel_metric.sql"
+#       upstream_task_name: "python_script_post_launch_metrics"
 
-    - name: "metadata_feature_to_staging"
-      templates_dict:
-        stage: "{{ var.value.DS_CONTENT_HBO_INGEST_DATASCIENCE_CONTENT_DEV }}"
-        database: 'max_beta'
-        schema: 'workspace'
-      sql_file_names:
-        - "feature_extraction_metadata.sql"
+#     - name: "metadata_feature_to_staging"
+#       templates_dict:
+#         stage: "{{ var.value.DS_CONTENT_HBO_INGEST_DATASCIENCE_CONTENT_DEV }}"
+#         database: 'max_beta'
+#         schema: 'workspace'
+#       sql_file_names:
+#         - "feature_extraction_metadata.sql"
 
-    - name: "mp_click_pre_launch_feature_to_staging"
-      templates_dict:
-        stage: "{{ var.value.DS_CONTENT_HBO_INGEST_DATASCIENCE_CONTENT_DEV }}"
-        database: 'max_beta'
-        schema: 'workspace'
-      sql_file_names:
-        - "feature_extraction_mp_click_pre_launch.sql"
+#     - name: "mp_click_pre_launch_feature_to_staging"
+#       templates_dict:
+#         stage: "{{ var.value.DS_CONTENT_HBO_INGEST_DATASCIENCE_CONTENT_DEV }}"
+#         database: 'max_beta'
+#         schema: 'workspace'
+#       sql_file_names:
+#         - "feature_extraction_mp_click_pre_launch.sql"
     
-    - name: "sub_total_feature_to_staging"
-      templates_dict:
-        stage: "{{ var.value.DS_CONTENT_HBO_INGEST_DATASCIENCE_CONTENT_DEV }}"
-        database: 'max_beta'
-        schema: 'workspace'
-      sql_file_names:
-        - "feature_extraction_total_sub_num.sql"
-      upstream_task_name: "python_script_post_launch_metrics"
+#     - name: "sub_total_feature_to_staging"
+#       templates_dict:
+#         stage: "{{ var.value.DS_CONTENT_HBO_INGEST_DATASCIENCE_CONTENT_DEV }}"
+#         database: 'max_beta'
+#         schema: 'workspace'
+#       sql_file_names:
+#         - "feature_extraction_total_sub_num.sql"
+#       upstream_task_name: "python_script_post_launch_metrics"
 
- #   - name: "content_cost_to_staging"
- #     templates_dict:
- #       stage: "{{ var.value.DS_CONTENT_HBO_INGEST_DATASCIENCE_CONTENT_DEV }}"
- #       database: 'max_beta'
- #       schema: 'workspace'
- #     sql_file_names:
- #       - "feature_extraction_content_cost.sql"
+#  #   - name: "content_cost_to_staging"
+#  #     templates_dict:
+#  #       stage: "{{ var.value.DS_CONTENT_HBO_INGEST_DATASCIENCE_CONTENT_DEV }}"
+#  #       database: 'max_beta'
+#  #       schema: 'workspace'
+#  #     sql_file_names:
+#  #       - "feature_extraction_content_cost.sql"
     
-    - name: "vtp_feature_to_staging"
-      templates_dict:
-        stage: "{{ var.value.DS_CONTENT_HBO_INGEST_DATASCIENCE_CONTENT_DEV }}"
-        database: 'max_beta'
-        schema: 'workspace'
-      sql_file_names:
-        - "feature_extraction_vtp.sql"
-      upstream_task_name: "python_script_post_launch_metrics"
+#     - name: "vtp_feature_to_staging"
+#       templates_dict:
+#         stage: "{{ var.value.DS_CONTENT_HBO_INGEST_DATASCIENCE_CONTENT_DEV }}"
+#         database: 'max_beta'
+#         schema: 'workspace'
+#       sql_file_names:
+#         - "feature_extraction_vtp.sql"
+#       upstream_task_name: "python_script_post_launch_metrics"
 
     - name: "ecr_container_creation"
       type: "BashOperator"
       kernel: "python3"
-      upstream_task_name : "funnel_metric_feature_to_staging"
+      # upstream_task_name : "funnel_metric_feature_to_staging"
 
     - name: "sagemaker_notebook_job_processing_script"
       type: "BashOperator"
@@ -126,12 +126,6 @@ dags:
       Details:
         instance_type: "ml.m5.2xlarge"
         instance_count: 1
-      templates_dict:
-        env: "{{ var.value.ENV }}"
-        dt: "{{ macros.ds_add(ds,1) }}"
-        yr: "{{ macros.yr(macros.ds_add(ds,1)) }}"
-        mo: "{{ macros.mo(macros.ds_add(ds,1)) }}"
-        bucket_prefix: "datascience-content" 
       BucketIOConfig:
         DEV:
           model_bucket: "datascience-content-dev"
