--- a/dags/resources/config/content_process_PostLaunchMetrics.yml
+++ b/dags/resources/config/content_process_PostLaunchMetrics.yml
@@ -35,118 +35,124 @@ dags:
       PROD: "hbomax-cds-alerts"
     tasks:
 
-#     - name: "python_script_post_launch_subscriber"
-#       type: "BashOperator"
-#       script_loc: "common"
-#       script_name: "post_launch_subscriber"
-#       param_file_name: "post_launch_subscriber"
+      - name: "python_script_post_launch_subscriber"
+        type: "BashOperator"
+        script_loc: "common"
+        script_name: "post_launch_subscriber"
+        param_file_name: "post_launch_subscriber"
 
-#     - name: "python_script_post_launch_metrics"
-#       type: "BashOperator"
-#       script_loc: "common"
-#       script_name: "post_launch_metrics"
-#       param_file_name: "post_launch_metrics"
-#       upstream_task_name: "python_script_post_launch_subscriber"
+      - name: "python_script_post_launch_metrics"
+        type: "BashOperator"
+        script_loc: "common"
+        script_name: "post_launch_metrics"
+        param_file_name: "post_launch_metrics"
+        upstream_task_name: "python_script_post_launch_subscriber"
 
-#     - name: "python_script_post_launch_trailer_metrics"
-#       type: "BashOperator"
-#       script_loc: "common"
-#       script_name: "post_launch_trailer_metrics"
-#       param_file_name: "post_launch_trailer_metrics"
-#       upstream_task_name: "python_script_post_launch_subscriber"
+      - name: "python_script_post_launch_trailer_metrics"
+        type: "BashOperator"
+        script_loc: "common"
+        script_name: "post_launch_trailer_metrics"
+        param_file_name: "post_launch_trailer_metrics"
+        upstream_task_name: "python_script_post_launch_subscriber"
 
-#     - name: "trailer_feature_to_staging"
-#       templates_dict:
-#         stage: "{{ var.value.DS_CONTENT_HBO_INGEST_DATASCIENCE_CONTENT_DEV }}"
-#         database: 'max_beta'
-#         schema: 'workspace'
-#       sql_file_names:
-#         - "feature_extraction_trailer.sql"
-#       upstream_task_name: "python_script_post_launch_trailer_metrics"
+      - name: "trailer_feature_to_staging"
+        templates_dict:
+          stage: "{{ var.value.DS_CONTENT_HBO_INGEST_DATASCIENCE_CONTENT_DEV }}"
+          database: 'max_dev'
+          schema: 'workspace'
+        sql_file_names:
+          - "feature_extraction_trailer.sql"
+        upstream_task_name: "python_script_post_launch_trailer_metrics"
+        downstream_task_name: ecr_container_creation
 
-#     - name: "funnel_metric_feature_to_staging"
-#       templates_dict:
-#         stage: "{{ var.value.DS_CONTENT_HBO_INGEST_DATASCIENCE_CONTENT_DEV }}"
-#         database: 'max_beta'
-#         schema: 'workspace'
-#       sql_file_names:
-#         - "feature_extraction_funnel_metric.sql"
-#       upstream_task_name: "python_script_post_launch_metrics"
+      - name: "funnel_metric_feature_to_staging"
+        templates_dict:
+          stage: "{{ var.value.DS_CONTENT_HBO_INGEST_DATASCIENCE_CONTENT_DEV }}"
+          database: 'max_dev'
+          schema: 'workspace'
+        sql_file_names:
+          - "feature_extraction_funnel_metric.sql"
+        upstream_task_name: "python_script_post_launch_metrics"
+        downstream_task_name: ecr_container_creation
 
-#     - name: "metadata_feature_to_staging"
-#       templates_dict:
-#         stage: "{{ var.value.DS_CONTENT_HBO_INGEST_DATASCIENCE_CONTENT_DEV }}"
-#         database: 'max_beta'
-#         schema: 'workspace'
-#       sql_file_names:
-#         - "feature_extraction_metadata.sql"
+      - name: "metadata_feature_to_staging"
+        templates_dict:
+          stage: "{{ var.value.DS_CONTENT_HBO_INGEST_DATASCIENCE_CONTENT_DEV }}"
+          database: 'max_dev'
+          schema: 'workspace'
+        sql_file_names:
+          - "feature_extraction_metadata.sql"
+        downstream_task_name: ecr_container_creation
 
-#     - name: "mp_click_pre_launch_feature_to_staging"
-#       templates_dict:
-#         stage: "{{ var.value.DS_CONTENT_HBO_INGEST_DATASCIENCE_CONTENT_DEV }}"
-#         database: 'max_beta'
-#         schema: 'workspace'
-#       sql_file_names:
-#         - "feature_extraction_mp_click_post_launch.sql"
-    
-#     - name: "sub_total_feature_to_staging"
-#       templates_dict:
-#         stage: "{{ var.value.DS_CONTENT_HBO_INGEST_DATASCIENCE_CONTENT_DEV }}"
-#         database: 'max_beta'
-#         schema: 'workspace'
-#       sql_file_names:
-#         - "feature_extraction_total_sub_num.sql"
-#       upstream_task_name: "python_script_post_launch_metrics"
+      - name: "mp_click_pre_launch_feature_to_staging"
+        templates_dict:
+          stage: "{{ var.value.DS_CONTENT_HBO_INGEST_DATASCIENCE_CONTENT_DEV }}"
+          database: 'max_dev'
+          schema: 'workspace'
+        sql_file_names:
+          - "feature_extraction_mp_click_post_launch.sql"
+        downstream_task_name: ecr_container_creation
 
-#  #   - name: "content_cost_to_staging"
-#  #     templates_dict:
-#  #       stage: "{{ var.value.DS_CONTENT_HBO_INGEST_DATASCIENCE_CONTENT_DEV }}"
-#  #       database: 'max_beta'
-#  #       schema: 'workspace'
-#  #     sql_file_names:
-#  #       - "feature_extraction_content_cost.sql"
-    
-#     - name: "vtp_feature_to_staging"
-#       templates_dict:
-#         stage: "{{ var.value.DS_CONTENT_HBO_INGEST_DATASCIENCE_CONTENT_DEV }}"
-#         database: 'max_beta'
-#         schema: 'workspace'
-#       sql_file_names:
-#         - "feature_extraction_vtp.sql"
-#       upstream_task_name: "python_script_post_launch_metrics"
+      - name: "sub_total_feature_to_staging"
+        templates_dict:
+          stage: "{{ var.value.DS_CONTENT_HBO_INGEST_DATASCIENCE_CONTENT_DEV }}"
+          database: 'max_dev'
+          schema: 'workspace'
+        sql_file_names:
+          - "feature_extraction_total_sub_num.sql"
+        upstream_task_name: "python_script_post_launch_metrics"
+        downstream_task_name: ecr_container_creation
 
-# - name: "ecr_container_creation"
-#   type: "BashOperator"
-#   kernel: "python3"
-#   # upstream_task_name : "funnel_metric_feature_to_staging"
+    #     - name: "content_cost_to_staging"
+    #       templates_dict:
+    #         stage: "{{ var.value.DS_CONTENT_HBO_INGEST_DATASCIENCE_CONTENT_DEV }}"
+    #         database: 'max_dev'
+    #         schema: 'workspace'
+    #       sql_file_names:
+    #         - "feature_extraction_content_cost.sql"
+    #      downstream_task_name: ecr_container_creation
 
-# - name: "sagemaker_notebook_job_processing_script"
-#   type: "BashOperator"
-#   notebook_name: "PrePostLaunch_28d"
-#   Details:
-#     instance_type: "ml.m5.2xlarge"
-#     instance_count: 1
-#   BucketIOConfig:
-#     DEV:
-#       model_bucket: "hbo-ingest-datascience-content-dev"
-#     BETA:
-#       model_bucket: "hbo-ingest-datascience-content-dev"
-#     PROD:
-#       model_bucket: "hbo-ingest-datascience-content"
-#   upstream_task_name: "ecr_container_creation"
-    
-    - name: "write_prediction_output_to_snowflake"
-      #upstream_task_name: "sagemaker_notebook_job_processing_script"
-      templates_dict:
-        stage: "{{ var.value.DS_CONTENT_HBO_OUTBOUND_DATASCIENCE_CONTENT_DEV }}"
-        database: 'max_dev'
-        schema: 'workspace'
-      sql_file_names:
-          - "output_to_S3.sql" 
+      - name: "vtp_feature_to_staging"
+        templates_dict:
+          stage: "{{ var.value.DS_CONTENT_HBO_INGEST_DATASCIENCE_CONTENT_DEV }}"
+          database: 'max_dev'
+          schema: 'workspace'
+        sql_file_names:
+          - "feature_extraction_vtp.sql"
+        upstream_task_name: "python_script_post_launch_metrics"
+        downstream_task_name: ecr_container_creation
 
-    - name: "send_notification_cds"
-      type: "EmailOperator"
-      to: "mei-cheng.shih@warnermedia.com"
-      subject: "sagemaker-airflow: EMAIL TASK test"
-      html: "Hi Team,<br><h3>Test email from sagemaker-airflow DAG task.</h3><br>Regards,<br> DAP"
-      upstream_task_name : "write_prediction_output_to_snowflake"
+      - name: "ecr_container_creation"
+        type: "BashOperator"
+        kernel: "python3"
+
+      - name: "sagemaker_notebook_job_processing_script"
+        type: "BashOperator"
+        notebook_name: "PrePostLaunch_28d"
+        Details:
+          instance_type: "ml.m5.2xlarge"
+          instance_count: 1
+        BucketIOConfig:
+          DEV:
+            model_bucket: "hbo-ingest-datascience-content-dev"
+          BETA:
+            model_bucket: "hbo-ingest-datascience-content-dev"
+          PROD:
+            model_bucket: "hbo-ingest-datascience-content"
+        upstream_task_name: "ecr_container_creation"
+
+      - name: "write_prediction_output_to_snowflake"
+        upstream_task_name: "sagemaker_notebook_job_processing_script"
+        templates_dict:
+          stage: "{{ var.value.DS_CONTENT_HBO_OUTBOUND_DATASCIENCE_CONTENT_DEV }}"
+          database: 'max_dev'
+          schema: 'workspace'
+        sql_file_names:
+            - "output_to_S3.sql" 
+
+      - name: "send_notification_cds"
+        type: "EmailOperator"
+        to: "mei-cheng.shih@warnermedia.com"
+        subject: "sagemaker-airflow: EMAIL TASK test"
+        html: "Hi Team,<br><h3>Test email from sagemaker-airflow DAG task.</h3><br>Regards,<br> DAP"
+        upstream_task_name : "write_prediction_output_to_snowflake"
