--- a/dags/resources/config/content_process_PostLaunchMetrics.yml
+++ b/dags/resources/config/content_process_PostLaunchMetrics.yml
@@ -40,20 +40,22 @@ dags:
         script_loc: "common"
         script_name: "post_launch_subscriber"
         param_file_name: "post_launch_subscriber"
-
-      - name: "python_script_post_launch_metrics"
-        type: "BashOperator"
-        script_loc: "common"
-        script_name: "post_launch_metrics"
-        param_file_name: "post_launch_metrics"
-        upstream_task_name: "python_script_post_launch_subscriber"
-
+      
+      # update the trailer first
       - name: "python_script_post_launch_trailer_metrics"
         type: "BashOperator"
         script_loc: "common"
         script_name: "post_launch_trailer_metrics"
         param_file_name: "post_launch_trailer_metrics"
         upstream_task_name: "python_script_post_launch_subscriber"
+      
+      # update the matrics second
+      - name: "python_script_post_launch_metrics"
+        type: "BashOperator"
+        script_loc: "common"
+        script_name: "post_launch_metrics"
+        param_file_name: "post_launch_metrics"
+        upstream_task_name: "python_script_post_launch_trailer_metrics"
 
       - name: "trailer_feature_to_staging"
         templates_dict:
@@ -62,7 +64,7 @@ dags:
           schema: 'workspace'
         sql_file_names:
           - "feature_extraction_trailer.sql"
-        upstream_task_name: "python_script_post_launch_trailer_metrics"
+        upstream_task_name: "python_script_post_launch_metrics"
         downstream_task_name: ecr_container_creation
 
       - name: "funnel_metric_feature_to_staging"
@@ -82,6 +84,7 @@ dags:
           schema: 'workspace'
         sql_file_names:
           - "feature_extraction_metadata.sql"
+        upstream_task_name: "python_script_post_launch_metrics"
         downstream_task_name: ecr_container_creation
 
       - name: "mp_click_pre_launch_feature_to_staging"
@@ -91,6 +94,7 @@ dags:
           schema: 'workspace'
         sql_file_names:
           - "feature_extraction_mp_click_pre_launch.sql"
+        upstream_task_name: "python_script_post_launch_metrics"
         downstream_task_name: ecr_container_creation
 
       - name: "sub_total_feature_to_staging"
