Dev yml update (#208)
* added lib to DAP testing

* Added codeowners team

* Develop (#21)

* added lib for DAP Testing

* Update CODEOWNERS

* Add first files for postlaunch DAG using python script (#2)

* Change upstream reference and parameter filename (#3)

* Rename file for airflow to work (#4)

* Remove library reference (#5)

* Change reference of prod to dev for test (#6)

* Set up env based parameters for dev (#7)

* Add missing role (#8)

* Add initial SQL of sub base update (#9)

* Fix typo with uneeded equality (#10)

* Add absolute path reference (#11)

* Capitalize some variables (#12)

* Add metric query (#13)

* Add missing SQL file (#14)

* Fix path (#15)

* Add missing import (#16)

* Change variable name and pylint fixes (#17)

* Add file extension missing (#18)

* Change stream table to viewership table to match sql (#19)

* Remove table literals as we dont fill params via snowflake (#20)

* Develop merge (#22)

* Update post_launch_metrics.json

* Update post_launch_metrics.json

* Update CODEOWNERS (#23)

* Update CODEOWNERS (#24)

Co-authored-by: CloudOpsJenkins <dapadmin&support@hbo.com>
Co-authored-by: Bobby484 <61495339+Bobby484@users.noreply.github.com>
Co-authored-by: jonnyhbo <70723253+jonnyhbo@users.noreply.github.com>

* Mc local dev (#57) (#58)

* Mc local dev (#57)

* added lib for DAP Testing

* Production Changes (#1)

* init changes

* latest changes

* Update dag_generator.py

* Changed path

* updated bucket name

* added lib to DAP testing

* Adding code owners

Co-authored-by: CloudOpsJenkins <dapadmin&support@hbo.com>

* Update CODEOWNERS

* Add first files for postlaunch DAG using python script (#2)

* Change upstream reference and parameter filename (#3)

* Rename file for airflow to work (#4)

* Remove library reference (#5)

* Change reference of prod to dev for test (#6)

* Set up env based parameters for dev (#7)

* Add m

--- a/dags/resources/config/content_process_PostLaunchMetrics.yml
+++ b/dags/resources/config/content_process_PostLaunchMetrics.yml
@@ -59,9 +59,9 @@ dags:
 
       - name: "trailer_feature_to_staging"
         templates_dict:
-          stage: "{{ var.value.DS_CONTENT_HBO_INGEST_DATASCIENCE_CONTENT_DEV }}"
-          database: 'max_dev'
-          schema: 'workspace'
+          stage: "{{ var.value.DS_CONTENT_HBO_INGEST_DATASCIENCE_CONTENT }}"
+          database: "{{ var.value.DS_SF_MAX_DATABASE }}"
+          schema: "{{ var.value.DS_SF_MAX_SCHEMA }}"
         sql_file_names:
           - "feature_extraction_trailer.sql"
         upstream_task_name: "python_script_post_launch_metrics"
@@ -69,9 +69,9 @@ dags:
 
       - name: "funnel_metric_feature_to_staging"
         templates_dict:
-          stage: "{{ var.value.DS_CONTENT_HBO_INGEST_DATASCIENCE_CONTENT_DEV }}"
-          database: 'max_dev'
-          schema: 'workspace'
+          stage: "{{ var.value.DS_CONTENT_HBO_INGEST_DATASCIENCE_CONTENT }}"
+          database: "{{ var.value.DS_SF_MAX_DATABASE }}"
+          schema: "{{ var.value.DS_SF_MAX_SCHEMA }}"
         sql_file_names:
           - "feature_extraction_funnel_metric.sql"
         upstream_task_name: "python_script_post_launch_metrics"
@@ -79,9 +79,9 @@ dags:
 
       - name: "metadata_feature_to_staging"
         templates_dict:
-          stage: "{{ var.value.DS_CONTENT_HBO_INGEST_DATASCIENCE_CONTENT_DEV }}"
-          database: 'max_dev'
-          schema: 'workspace'
+          stage: "{{ var.value.DS_CONTENT_HBO_INGEST_DATASCIENCE_CONTENT }}"
+          database: "{{ var.value.DS_SF_MAX_DATABASE }}"
+          schema: "{{ var.value.DS_SF_MAX_SCHEMA }}"
         sql_file_names:
           - "feature_extraction_metadata.sql"
         upstream_task_name: "python_script_post_launch_metrics"
@@ -89,9 +89,9 @@ dags:
 
       - name: "media_cost_pre_launch_feature_to_staging"
         templates_dict:
-          stage: "{{ var.value.DS_CONTENT_HBO_INGEST_DATASCIENCE_CONTENT_DEV }}"
-          database: 'max_dev'
-          schema: 'workspace'
+          stage: "{{ var.value.DS_CONTENT_HBO_INGEST_DATASCIENCE_CONTENT }}"
+          database: "{{ var.value.DS_SF_MAX_DATABASE }}"
+          schema: "{{ var.value.DS_SF_MAX_SCHEMA }}"
         sql_file_names:
           - "feature_extraction_media_cost_pre_launch.sql"
         upstream_task_name: "python_script_post_launch_metrics"
@@ -99,9 +99,9 @@ dags:
 
       - name: "sub_total_feature_to_staging"
         templates_dict:
-          stage: "{{ var.value.DS_CONTENT_HBO_INGEST_DATASCIENCE_CONTENT_DEV }}"
-          database: 'max_dev'
-          schema: 'workspace'
+          stage: "{{ var.value.DS_CONTENT_HBO_INGEST_DATASCIENCE_CONTENT }}"
+          database: "{{ var.value.DS_SF_MAX_DATABASE }}"
+          schema: "{{ var.value.DS_SF_MAX_SCHEMA }}"
         sql_file_names:
           - "feature_extraction_total_sub_num.sql"
         upstream_task_name: "python_script_post_launch_metrics"
@@ -119,9 +119,9 @@ dags:
 
       - name: "vtp_feature_to_staging"
         templates_dict:
-          stage: "{{ var.value.DS_CONTENT_HBO_INGEST_DATASCIENCE_CONTENT_DEV }}"
-          database: 'max_dev'
-          schema: 'workspace'
+          stage: "{{ var.value.DS_CONTENT_HBO_INGEST_DATASCIENCE_CONTENT }}"
+          database: "{{ var.value.DS_SF_MAX_DATABASE }}"
+          schema: "{{ var.value.DS_SF_MAX_SCHEMA }}"
         sql_file_names:
           - "feature_extraction_vtp.sql"
         upstream_task_name: "python_script_post_launch_metrics"
@@ -149,9 +149,9 @@ dags:
       - name: "write_prediction_output_to_snowflake"
         upstream_task_name: "sagemaker_notebook_job_processing_script"
         templates_dict:
-          stage: "{{ var.value.DS_CONTENT_HBO_OUTBOUND_DATASCIENCE_CONTENT_DEV }}"
-          database: 'max_dev'
-          schema: 'workspace'
+          stage: "{{ var.value.DS_CONTENT_HBO_OUTBOUND_DATASCIENCE_CONTENT }}"
+          database: "{{ var.value.DS_SF_MAX_DATABASE }}"
+          schema: "{{ var.value.DS_SF_MAX_SCHEMA }}"
         sql_file_names:
             - "output_to_S3.sql" 
 
