--- a/dags/resources/config/content_process_PostLaunchMetrics.yml
+++ b/dags/resources/config/content_process_PostLaunchMetrics.yml
@@ -97,6 +97,16 @@ dags:
         upstream_task_name: "python_script_post_launch_metrics"
         downstream_task_name: ecr_container_creation
 
+      - name: "media_cost_post_launch_feature_to_staging"
+        templates_dict:
+          stage: "{{ var.value.DS_CONTENT_HBO_INGEST_DATASCIENCE_CONTENT }}"
+          database: "{{ var.value.DS_SF_MAX_DATABASE }}"
+          schema: "{{ var.value.DS_SF_MAX_SCHEMA }}"
+        sql_file_names:
+          - "feature_extraction_media_cost_post_launch.sql"
+        upstream_task_name: "python_script_post_launch_metrics"
+        downstream_task_name: ecr_container_creation
+
       - name: "sub_total_feature_to_staging"
         templates_dict:
           stage: "{{ var.value.DS_CONTENT_HBO_INGEST_DATASCIENCE_CONTENT }}"
